--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
+    "autoprefixer": "^10.2.3",
     "eslint": "^7.18.0",
-    "eslint-plugin-react": "^7.22.0"
+    "eslint-plugin-react": "^7.22.0",
+    "postcss": "^8.2.4",
+    "postcss-flexbugs-fixes": "^5.0.2"
   }
 }
