--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
     "remark-prism": "^1.3.4",
+    "sass": "^1.32.5",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
