--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "remark": "^13.0.0",
+    "remark-autolink-headings": "^6.0.1",
     "remark-html": "^13.0.1",
     "remark-prism": "^1.3.4",
+    "remark-slug": "^6.0.0",
     "sass": "^1.32.5",
     "typescript": "^4.1.3"
   },
