--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "prismjs": "^1.23.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "rehype-katex": "^4.0.0",
+    "rehype-stringify": "^8.0.0",
     "remark": "^13.0.0",
     "remark-autolink-headings": "^6.0.1",
     "remark-html": "^13.0.1",
+    "remark-math": "^4.0.0",
     "remark-prism": "^1.3.4",
+    "remark-rehype": "^8.0.0",
     "remark-slug": "^6.0.0",
     "sass": "^1.32.5",
     "typescript": "^4.1.3"
