--- a/package.json
+++ b/package.json
@@ -8,20 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "gray-matter": "^4.0.2",
+    "modern-normalize": "^1.0.0",
     "next": "^10.0.5",
-    "prismjs": "^1.23.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "rehype-katex": "^4.0.0",
-    "rehype-stringify": "^8.0.0",
-    "remark": "^13.0.0",
-    "remark-autolink-headings": "^6.0.1",
-    "remark-html": "^13.0.1",
-    "remark-math": "^4.0.0",
-    "remark-prism": "^1.3.4",
-    "remark-rehype": "^8.0.0",
-    "remark-slug": "^6.0.0",
     "sass": "^1.32.5",
     "typescript": "^4.1.3"
   },
@@ -35,6 +30,17 @@
     "eslint": "^7.18.0",
     "eslint-plugin-react": "^7.22.0",
     "postcss": "^8.2.4",
-    "postcss-flexbugs-fixes": "^5.0.2"
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "rehype-katex": "^4.0.0",
+    "rehype-stringify": "^8.0.0",
+    "remark": "^13.0.0",
+    "remark-autolink-headings": "^6.0.1",
+    "remark-emoji": "^2.1.0",
+    "remark-footnotes": "^3.0.0",
+    "remark-gfm": "^1.0.0",
+    "remark-math": "^4.0.0",
+    "remark-prism": "^1.3.4",
+    "remark-rehype": "^8.0.0",
+    "remark-slug": "^6.0.0"
   }
 }
