--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "next": "^10.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "sass": "^1.32.5",
-    "typescript": "^4.1.3"
+    "sass": "^1.32.5"
   },
   "devDependencies": {
     "@types/node": "^14.14.22",
@@ -41,6 +40,7 @@
     "remark-math": "^4.0.0",
     "remark-prism": "^1.3.4",
     "remark-rehype": "^8.0.0",
-    "remark-slug": "^6.0.0"
+    "remark-slug": "^6.0.0",
+    "typescript": "^4.1.3"
   }
 }
