--- a/package.json
+++ b/package.json
@@ -5,29 +5,35 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "gray-matter": "^4.0.2",
     "modern-normalize": "^1.0.0",
     "next": "^10.0.5",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "sass": "^1.32.5"
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "gray-matter": "^4.0.2",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/testing-library__jest-dom": "^5.9.5",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "autoprefixer": "^10.2.3",
     "eslint": "^7.18.0",
     "eslint-plugin-react": "^7.22.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.3",
     "postcss": "^8.2.4",
     "postcss-flexbugs-fixes": "^5.0.2",
     "rehype-katex": "^4.0.0",
@@ -41,6 +47,9 @@
     "remark-prism": "^1.3.4",
     "remark-rehype": "^8.0.0",
     "remark-slug": "^6.0.0",
-    "typescript": "^4.1.3"
+    "ts-jest": "^26.5.1",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3",
+    "sass": "^1.32.5"
   }
 }
