--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "gray-matter": "^4.0.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@types/jest": "^26.0.20",
@@ -32,6 +31,7 @@
     "autoprefixer": "^10.2.3",
     "eslint": "^7.18.0",
     "eslint-plugin-react": "^7.22.0",
+    "gray-matter": "^4.0.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "postcss": "^8.2.4",
@@ -47,9 +47,11 @@
     "remark-prism": "^1.3.4",
     "remark-rehype": "^8.0.0",
     "remark-slug": "^6.0.0",
+    "sass": "^1.32.5",
+    "stylelint": "^13.11.0",
+    "stylelint-config-standard": "^20.0.0",
     "ts-jest": "^26.5.1",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3",
-    "sass": "^1.32.5"
+    "typescript": "^4.1.3"
   }
 }
