--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "remark": "^13.0.0",
     "remark-autolink-headings": "^6.0.1",
     "remark-emoji": "^2.1.0",
+    "remark-external-links": "^8.0.0",
     "remark-footnotes": "^3.0.0",
     "remark-gfm": "^1.0.0",
     "remark-math": "^4.0.0",
