--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "modern-normalize": "^1.0.0",
     "next": "^10.0.5",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "rss": "^1.2.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.9",
@@ -25,6 +26,7 @@
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/rss": "^0.0.28",
     "@types/testing-library__jest-dom": "^5.9.5",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
