--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "^10.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "rss": "^1.2.2"
+    "rss": "^1.2.2",
+    "unist-util-visit": "^2.0.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.9",
@@ -30,6 +31,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/rss": "^0.0.28",
     "@types/testing-library__jest-dom": "^5.9.5",
+    "@types/unist": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "autoprefixer": "^10.2.3",
@@ -57,6 +59,8 @@
     "stylelint-config-standard": "^21.0.0",
     "ts-jest": "^26.5.1",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.2"
+    "typescript": "^4.2.2",
+    "unified": "^9.2.1",
+    "vfile": "^4.2.1"
   }
 }
