--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "rehype-stringify": "^8.0.0",
     "remark": "^13.0.0",
     "remark-autolink-headings": "^6.0.1",
+    "remark-custom-container": "^0.1.0",
     "remark-emoji": "^2.1.0",
     "remark-external-links": "^8.0.0",
     "remark-footnotes": "^3.0.0",
