--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@typescript-eslint/parser": "^4.28.2",
     "autoprefixer": "^10.2.3",
     "eslint": "^7.32.0",
+    "eslint-config-next": "^11.1.2",
     "eslint-plugin-react": "^7.22.0",
     "gray-matter": "^4.0.3",
     "identity-obj-proxy": "^3.0.0",
