--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "lint": "next lint",
     "build": "next build",
     "start": "next start",
     "export": "next export",
-    "test": "jest"
+    "test": "jest",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
@@ -39,6 +41,7 @@
     "eslint-config-next": "^11.1.2",
     "eslint-plugin-react": "^7.22.0",
     "gray-matter": "^4.0.3",
+    "husky": "^7.0.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "postcss": "^8.3.5",
