--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "next start",
     "export": "next export",
     "test": "jest",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "format": "prettier --write . && npm run lint -- --fix"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -39,6 +40,7 @@
     "autoprefixer": "^10.2.3",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.2",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.26.1",
     "gray-matter": "^4.0.3",
     "husky": "^7.0.2",
@@ -46,6 +48,7 @@
     "jest": "^27.0.6",
     "postcss": "^8.3.5",
     "postcss-flexbugs-fixes": "^5.0.2",
+    "prettier": "^2.4.1",
     "rehype-katex": "^5.0.0",
     "rehype-stringify": "^8.0.0",
     "remark": "^13.0.0",
