--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "postcss": "^8.3.11",
     "postcss-flexbugs-fixes": "^5.0.2",
     "prettier": "^2.5.1",
+    "rehype-autolink-headings": "^6.1.0",
     "rehype-katex": "^6.0.2",
+    "rehype-slug": "^5.0.0",
     "rehype-stringify": "^9.0.2",
     "remark": "^14.0.2",
     "remark-autolink-headings": "^7.0.1",
