--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "stylelint-config-standard": "^24.0.0",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
-    "typescript": "^4.4.4",
+    "typescript": "4.4.4",
     "unified": "^10.1.1",
     "vfile": "^5.2.0"
   }
