--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
     "@types/rss": "^0.0.29",
     "@types/testing-library__jest-dom": "^5.14.2",
     "@types/unist": "^2.0.3",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.28.2",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
     "autoprefixer": "^10.4.2",
-    "eslint": "^7.32.0",
+    "eslint": "^8.10.0",
     "eslint-config-next": "^12.1.0",
     "eslint-config-prettier": "^8.4.0",
-    "eslint-plugin-react": "^7.29.2",
+    "eslint-plugin-prettier": "^4.0.0",
     "gray-matter": "^4.0.3",
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
