--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "format": "prettier --write . && npm run lint -- --fix"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2.1",
-    "@fortawesome/free-brands-svg-icons": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "modern-normalize": "^1.1.0",
     "next": "^14.0.4",
@@ -26,48 +26,46 @@
     "unist-util-visit": "^4.1.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^12.1.5",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^18.11.18",
-    "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14",
-    "@types/rss": "^0.0.29",
-    "@types/testing-library__jest-dom": "^5.14.5",
+    "@testing-library/jest-dom": "^6.1.6",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.6",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
+    "@types/rss": "^0.0.32",
     "@types/unist": "^2.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.47.1",
-    "@typescript-eslint/parser": "^5.48.0",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.31.0",
-    "eslint-config-next": "^13.1.1",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4",
+    "eslint-config-prettier": "^9.1.0",
     "gray-matter": "^4.0.3",
-    "husky": "^8.0.2",
+    "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.5.1",
-    "postcss": "^8.4.20",
+    "jest": "^29.7.0",
+    "postcss": "^8.4.21",
     "postcss-flexbugs-fixes": "^5.0.2",
-    "prettier": "^2.8.2",
+    "prettier": "^2.8.7",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-katex": "^6.0.2",
     "rehype-slug": "^5.1.0",
     "rehype-stringify": "^9.0.3",
     "remark": "^14.0.2",
     "remark-custom-container": "^1.2.0",
-    "remark-emoji": "^3.0.2",
+    "remark-emoji": "^3.1.1",
     "remark-external-links": "^9.0.1",
     "remark-footnotes": "^4.0.1",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "remark-prism": "^1.3.6",
     "remark-rehype": "^10.1.0",
-    "sass": "^1.57.1",
-    "stylelint": "^14.16.1",
-    "stylelint-config-standard": "^29.0.0",
-    "ts-jest": "^27.1.4",
-    "ts-node": "^10.9.1",
-    "typescript": "4.9.4",
+    "sass": "^1.69.6",
+    "stylelint": "^16.1.0",
+    "stylelint-config-standard": "^36.0.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
     "unified": "^10.1.2",
     "vfile": "^5.3.6"
   }
