--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "next lint",
     "build": "next build",
     "start": "next start",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "test": "vitest run",
     "prepare": "husky install",
     "format": "prettier --write . && npm run lint -- --fix"
   },
@@ -25,9 +25,7 @@
     "unist-util-visit": "^4.1.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.1.6",
     "@testing-library/react": "^14.1.2",
-    "@types/jest": "^29.5.11",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
@@ -35,14 +33,15 @@
     "@types/unist": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.32.0",
     "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "^9.1.0",
     "gray-matter": "^4.0.3",
+    "happy-dom": "^12.10.3",
     "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.7.0",
     "postcss": "^8.4.21",
     "postcss-flexbugs-fixes": "^5.0.2",
     "prettier": "^2.8.7",
@@ -62,10 +61,10 @@
     "sass": "^1.69.6",
     "stylelint": "^16.1.0",
     "stylelint-config-standard": "^36.0.0",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.2",
     "typescript": "^5.1",
     "unified": "^10.1.2",
-    "vfile": "^5.3.6"
+    "vfile": "^5.3.6",
+    "vite": "^5.0.10",
+    "vitest": "^1.1.1"
   }
 }
