--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "homepage": "https://github.com/koka831/koka831.github.io",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "lint": "next lint",
     "build": "next build",
     "start": "next start",
@@ -18,17 +18,17 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "modern-normalize": "^1.1.0",
-    "next": "^14.2.13",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "15.2.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "rss": "^1.2.2",
     "unist-util-visit": "^4.1.1"
   },
   "devDependencies": {
-    "@testing-library/react": "^14.1.2",
+    "@testing-library/react": "^16.2.0",
     "@types/node": "^20.10.6",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
     "@types/rss": "^0.0.32",
     "@types/unist": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
@@ -36,7 +36,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.38.0",
-    "eslint-config-next": "^14.1.0",
+    "eslint-config-next": "15.2.1",
     "eslint-config-prettier": "^9.1.0",
     "gray-matter": "^4.0.3",
     "happy-dom": "^12.10.3",
@@ -64,5 +64,9 @@
     "vfile": "^5.3.6",
     "vite": "^5.4.8",
     "vitest": "^1.1.3"
+  },
+  "overrides": {
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4"
   }
 }
