--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "rss": "^1.2.2",
-    "unist-util-visit": "^4.1.1"
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@testing-library/react": "^16.2.0",
@@ -43,24 +43,26 @@
     "husky": "^9.0.6",
     "identity-obj-proxy": "^3.0.0",
     "prettier": "^2.8.7",
-    "rehype-autolink-headings": "^6.1.1",
-    "rehype-katex": "^6.0.3",
-    "rehype-slug": "^5.1.0",
-    "rehype-stringify": "^9.0.3",
-    "remark": "^14.0.2",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-external-links": "^3.0.0",
+    "rehype-katex": "^7.0.1",
+    "rehype-raw": "^7.0.0",
+    "rehype-slug": "^6.0.0",
+    "rehype-stringify": "^10.0.1",
+    "remark": "^15.0.1",
     "remark-custom-container": "^1.2.0",
-    "remark-emoji": "^3.1.1",
-    "remark-external-links": "^9.0.1",
+    "remark-emoji": "^5.0.1",
     "remark-footnotes": "^4.0.1",
-    "remark-gfm": "^3.0.1",
-    "remark-math": "^5.1.1",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
+    "remark-parse": "^11.0.0",
     "remark-prism": "^1.3.6",
-    "remark-rehype": "^10.1.0",
+    "remark-rehype": "^11.1.1",
     "sass": "^1.69.6",
     "stylelint": "^16.1.0",
     "stylelint-config-standard": "^36.0.0",
     "typescript": "^5.1",
-    "unified": "^10.1.2",
+    "unified": "^11.0.5",
     "vfile": "^5.3.6",
     "vite": "^5.4.8",
     "vitest": "^1.1.3"
