--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "mdast": "^3.0.0",
     "modern-normalize": "^1.1.0",
     "next": "15.2.1",
     "react": "19.0.0",
@@ -30,7 +31,7 @@
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "@types/rss": "^0.0.32",
-    "@types/unist": "^2.0.3",
+    "@types/unist": "^3.0.3",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-react": "^4.2.1",
